[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyckb"
version = "1.0.2"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Python SDK for CKB"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/pyckb"

[tool.hatch.build.targets.wheel]
packages = ["ckb"]
