[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyckb"
version = "1.1.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "pyckb: nervos ckb library for humans"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/pyckb"
